# FreeRTOS-Kernel

portable/: CMakeLists.txt
portable/GCC/TMDS570/: CMakeLists.txt  port.c  portASM.s  portmacro.h
portable/GCC/TMDS570/archive/: error.txt  os_portasm.asm  portASM-old.asm
